--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,9 @@ div div {
     height: 70vh;
     border: 3px solid pink;
 }
+
+article {
+    width: 100%;
+    height: 70vh;
+    border: 3px solid pink;
+}
