--- a/styles.css
+++ b/styles.css
@@ -94,57 +94,7 @@ body {
   background-color: hsl(var(--dark-blue));
   border: 2px solid black;
 }
-/* -------- left part scroll --------- */
 
-.mandatory-x {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 50%;
-  height: 100vh;
-  overflow: scroll;
-  scroll-snap-type: x mandatory;
-}
-
-.left-fixed {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-
-.mandatory-x > div {
-  scroll-snap-align: start;
-  scroll-snap-stop: always;
-}
-
-div {
-  width: 45vw;
-  height: 100%;
-  border: 3px solid purple;
-}
-
-/* --------- right part scroll --------- */
-
-.mandatory-y {
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 50%;
-  height: 100vh;
-  overflow: scroll;
-  scroll-snap-type: y mandatory;
-}
-
-.mandatory-y > div {
-  scroll-snap-align: center;
-  scroll-snap-stop: always;
-}
-
-div div {
-  width: 100%;
-  height: 70vh;
-  border: 3px solid pink;
-}
 
 h1 {
   text-align: center;
@@ -176,6 +126,50 @@ article p {
   padding: 10px 50px;
   border-radius: 15px;
 }
+
+/* -------- left part scroll --------- */
+
+.mandatory-x {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 100vh;
+    overflow: scroll;
+    scroll-snap-type: x mandatory;
+  }
+  
+  .left-fixed {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  
+  .mandatory-x > article {
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+    width: 100%;
+    height: 100%;
+    border: 3px solid purple;
+  }
+  
+  /* --------- right part scroll --------- */
+  
+  .mandatory-y {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 50%;
+    height: 100vh;
+    overflow: scroll;
+    scroll-snap-type: y mandatory;
+  }
+  
+  .mandatory-y > article {
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+  }
+
 .mandatory-y article {
   width: 100%;
   /* TODO
