--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,6 @@ body {
   border: 2px solid black;
 }
 
-
 h1 {
   text-align: center;
   text-transform: uppercase;
@@ -109,73 +108,84 @@ h2 {
   font-size: var(--fs-500);
 }
 
-article {
+article.left-side {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
+article.left-side iframe {
+  padding: 10px 15px;
+}
+
+article.right-side {
+  min-height: 100vh;
   padding: 20px;
   display: grid;
   justify-content: center;
-}
-
-article p {
-  max-width: 60ch;
+  align-items: center;
 }
 
 .background-buffer {
   display: grid;
+  height: auto;
   gap: 2rem;
   background-color: hsl(var(--white) / 0.7);
-  padding: 10px 50px;
+  padding: 20px 50px;
   border-radius: 15px;
+}
+
+article.right-side p {
+  max-width: 70ch;
+}
+
+article.right-side ol {
+  list-style: circle;
 }
 
 /* -------- left part scroll --------- */
 
 .mandatory-x {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 50%;
-    height: 100vh;
-    overflow: scroll;
-    scroll-snap-type: x mandatory;
-  }
-  
-  .left-fixed {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-  
-  .mandatory-x > article {
-    scroll-snap-align: start;
-    scroll-snap-stop: always;
-    width: 100%;
-    height: 100%;
-    border: 3px solid purple;
-  }
-  
-  /* --------- right part scroll --------- */
-  
-  .mandatory-y {
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 50%;
-    height: 100vh;
-    overflow: scroll;
-    scroll-snap-type: y mandatory;
-  }
-  
-  .mandatory-y > article {
-    scroll-snap-align: start;
-    scroll-snap-stop: always;
-  }
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 50%;
+  height: 100vh;
+  overflow: scroll;
+  scroll-snap-type: x mandatory;
+}
+
+.left-fixed {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.mandatory-x > article {
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
+  width: 100%;
+  height: 100%;
+}
+
+/* --------- right part scroll --------- */
+
+.mandatory-y {
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 50%;
+  height: 100vh;
+  overflow: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+.mandatory-y > article {
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
+}
 
 .mandatory-y article {
   width: 100%;
-  /* TODO
-     * If we define fixed height, the text overflows its container.
-     * If we don't, scroll may not work. */
   height: auto;
-  /* ! DEBUG */
-  border: 3px solid purple;
 }
