--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,35 @@ article.right-side ol {
   height: 100vh;
   overflow: scroll;
 }
+
+
+@media only screen and (max-width: 900px) {
+  
+
+  .mandatory-x {
+  
+    left: 0;
+    top: 0;
+    width: 1000%;
+    height: 50vh;
+
+}
+
+.mandatory-y {
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: 50vh;
+
+}
+.mandatory-x > article {
+  width: 100vw;
+}
+
+article.left-side iframe {
+  padding: 0;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+}
