--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,11 @@ article.right-side ol {
 .mandatory-y article {
   width: 100%;
   height: 100vh;
+ 
+}
+.mandatory-y article  .background-buffer {
   overflow: scroll;
+  height: 100%;
 }
 
 
